--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
+  modal_progress_hud: ^0.1.3
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
